--- a/index.html
+++ b/index.html
@@ -48,5 +48,72 @@
             </nav>
         </div>
     </header>
+
+     <!-- Hero Section -->
+    <section id="home" class="pt-24 pb-16 bg-gradient-to-br from-blue-50 to-indigo-100">
+        <div class="container mx-auto px-4">
+            <div class="text-center max-w-4xl mx-auto">
+                <div class="mb-8">
+                    <img src="https://via.placeholder.com/200x200/4F46E5/FFFFFF?text=AJ" 
+                         alt="Alex Johnson" 
+                         class="w-48 h-48 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
+                </div>
+                <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-4 fade-in">Alex Johnson</h1>
+                <p class="text-xl md:text-2xl text-gray-600 mb-8 fade-in">Full-Stack Developer & Software Engineer</p>
+                <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto fade-in">
+                    Passionate about creating innovative solutions through code. Specializing in full-stack development, mobile applications, and AI-powered solutions that make a real impact.
+                </p>
+                <div class="flex flex-col sm:flex-row gap-4 justify-center fade-in">
+                    <a href="#projects" class="inline-flex items-center px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg transition-colors">
+                        <i class="fas fa-briefcase mr-2"></i>
+                        View My Work
+                    </a>
+                    <a href="#contact" class="inline-flex items-center px-6 py-3 border border-gray-300 hover:border-blue-600 text-gray-700 hover:text-blue-600 font-medium rounded-lg transition-colors">
+                        <i class="fas fa-envelope mr-2"></i>
+                        Get In Touch
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Me Section -->
+    <section id="about" class="py-16 bg-white">
+        <div class="container mx-auto px-4">
+            <div class="max-w-4xl mx-auto">
+                <div class="text-center mb-12">
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 fade-in">
+                        <i class="fas fa-user text-blue-600 mr-3"></i>
+                        About Me
+                    </h2>
+                    <div class="w-24 h-1 bg-blue-600 mx-auto"></div>
+                </div>
+
+                <div class="grid md:grid-cols-2 gap-12 items-center">
+                    <div class="fade-in">
+                        <img src="https://via.placeholder.com/400x400/4F46E5/FFFFFF?text=About+Me" 
+                             alt="About Alex Johnson" 
+                             class="w-full rounded-lg shadow-lg object-cover">
+                    </div>
+                    <div class="fade-in">
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-4">Hello! I'm Alex Johnson</h3>
+                        <p class="text-gray-700 mb-4">
+                            I'm a passionate Full-Stack Developer with expertise in modern web technologies, mobile app development, and AI integration. My journey in programming has led me to work on diverse projects from business applications to innovative AI platforms.
+                        </p>
+                        <p class="text-gray-700 mb-4">
+                            I specialize in React ecosystem, Node.js, and have extensive experience with Firebase, Next.js, and React Native. I enjoy building scalable solutions that solve real-world problems and create meaningful user experiences.
+                        </p>
+                        <p class="text-gray-700 mb-6">
+                            As a team leader and individual contributor, I've successfully delivered projects ranging from event management platforms to desktop applications, always focusing on clean code, user experience, and innovative solutions.
+                        </p>
+                        <a href="#" class="inline-flex items-center px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg transition-colors">
+                            <i class="fas fa-download mr-2"></i>
+                            Download CV
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
