technical skill section

--- a/index.html
+++ b/index.html
@@ -199,5 +199,45 @@
         </div>
     </section>
 
+     <!-- Technical Skills Section -->
+    <section id="skills" class="py-16 bg-white">
+        <div class="container mx-auto px-4">
+            <div class="max-w-6xl mx-auto">
+                <div class="text-center mb-12">
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 fade-in">
+                        <i class="fas fa-code text-blue-600 mr-3"></i>
+                        Technical Skills
+                    </h2>
+                    <div class="w-24 h-1 bg-blue-600 mx-auto"></div>
+                    <p class="text-gray-700 mt-4 max-w-2xl mx-auto">
+                        Expertise in modern technologies and frameworks for building scalable applications
+                    </p>
+                </div>
+
+                <!-- Skills Grid -->
+                <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6 mb-12" id="skills-grid">
+                    <!-- Skills will be populated by JavaScript -->
+                </div>
+
+                <!-- Additional Technologies -->
+                <div class="fade-in">
+                    <h3 class="text-xl font-semibold text-gray-900 mb-6 text-center">Additional Technologies & Tools</h3>
+                    <div class="flex flex-wrap justify-center gap-3">
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">MongoDB</span>
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">PostgreSQL</span>
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">Docker</span>
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">AWS</span>
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">Vercel</span>
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">Netlify</span>
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">Figma</span>
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">VS Code</span>
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">Postman</span>
+                        <span class="px-4 py-2 bg-gray-100 text-gray-800 rounded-full text-sm font-medium">Electron</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
