--- a/index.html
+++ b/index.html
@@ -239,5 +239,27 @@
         </div>
     </section>
 
+    <!-- Services Section -->
+    <section id="services" class="py-16 bg-gray-50">
+        <div class="container mx-auto px-4">
+            <div class="max-w-7xl mx-auto">
+                <div class="text-center mb-12">
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 fade-in">
+                        <i class="fas fa-tools text-blue-600 mr-3"></i>
+                        Services I Offer
+                    </h2>
+                    <div class="w-24 h-1 bg-blue-600 mx-auto"></div>
+                    <p class="text-gray-700 mt-4 max-w-2xl mx-auto">
+                        Comprehensive software development services to bring your ideas to life
+                    </p>
+                </div>
+
+                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8" id="services-grid">
+                    <!-- Services will be populated by JavaScript -->
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
