project, contact and footer created

--- a/index.html
+++ b/index.html
@@ -261,5 +261,126 @@
         </div>
     </section>
 
+    <!-- Projects Section -->
+    <section id="projects" class="py-16 bg-white">
+        <div class="container mx-auto px-4">
+            <div class="max-w-7xl mx-auto">
+                <div class="text-center mb-12">
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 fade-in">
+                        <i class="fas fa-laptop-code text-blue-600 mr-3"></i>
+                        Featured Projects
+                    </h2>
+                    <div class="w-24 h-1 bg-blue-600 mx-auto"></div>
+                    <p class="text-gray-700 mt-4 max-w-2xl mx-auto">
+                        Here are some of the projects I've worked on that showcase my skills and experience
+                    </p>
+                </div>
+
+                <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="projects-grid">
+                    <!-- Projects will be populated by JavaScript -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="py-16 bg-gray-50">
+        <div class="container mx-auto px-4">
+            <div class="max-w-4xl mx-auto">
+                <div class="text-center mb-12">
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 fade-in">
+                        <i class="fas fa-envelope text-blue-600 mr-3"></i>
+                        Get In Touch
+                    </h2>
+                    <div class="w-24 h-1 bg-blue-600 mx-auto"></div>
+                    <p class="text-gray-700 mt-4 max-w-2xl mx-auto">
+                        Ready to start your next project? Let's discuss how I can help bring your ideas to life.
+                    </p>
+                </div>
+
+                <div class="grid md:grid-cols-2 gap-8">
+                    <div class="bg-white rounded-lg shadow-md p-6 fade-in">
+                        <h3 class="text-xl font-semibold text-gray-900 mb-4">Contact Information</h3>
+                        <div class="space-y-4">
+                            <div class="flex items-center">
+                                <i class="fas fa-envelope text-blue-600 mr-3"></i>
+                                <div>
+                                    <p class="font-medium">Email</p>
+                                    <p class="text-gray-600">alex.johnson@email.com</p>
+                                </div>
+                            </div>
+                            <div class="flex items-center">
+                                <i class="fas fa-phone text-blue-600 mr-3"></i>
+                                <div>
+                                    <p class="font-medium">Phone</p>
+                                    <p class="text-gray-600">+1 (555) 123-4567</p>
+                                </div>
+                            </div>
+                            <div class="flex items-center">
+                                <i class="fas fa-map-marker-alt text-blue-600 mr-3"></i>
+                                <div>
+                                    <p class="font-medium">Location</p>
+                                    <p class="text-gray-600">San Francisco, CA</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-white rounded-lg shadow-md p-6 fade-in">
+                        <h3 class="text-xl font-semibold text-gray-900 mb-4">Social Links</h3>
+                        <div class="space-y-4">
+                            <a href="#" class="flex items-center hover:text-blue-600 transition-colors">
+                                <i class="fab fa-github mr-3"></i>
+                                <span>github.com/alexjohnson</span>
+                            </a>
+                            <a href="#" class="flex items-center hover:text-blue-600 transition-colors">
+                                <i class="fab fa-linkedin mr-3"></i>
+                                <span>linkedin.com/in/alexjohnson</span>
+                            </a>
+                            <a href="#" class="flex items-center hover:text-blue-600 transition-colors">
+                                <i class="fab fa-twitter mr-3"></i>
+                                <span>@alexjohnsondev</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-center mt-8">
+                    <a href="mailto:alex.johnson@email.com" class="inline-flex items-center px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg transition-colors">
+                        <i class="fas fa-envelope mr-2"></i>
+                        Send Message
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white py-8">
+        <div class="container mx-auto px-4">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <div class="mb-4 md:mb-0">
+                    <p>&copy; 2024 Alex Johnson. All rights reserved.</p>
+                </div>
+                <div class="flex space-x-4">
+                    <a href="#" class="hover:text-blue-400 transition-colors">
+                        <i class="fab fa-github text-xl"></i>
+                    </a>
+                    <a href="#" class="hover:text-blue-400 transition-colors">
+                        <i class="fab fa-linkedin text-xl"></i>
+                    </a>
+                    <a href="#" class="hover:text-blue-400 transition-colors">
+                        <i class="fab fa-twitter text-xl"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Load data files -->
+    <script src="data/projects.js"></script>
+    <script src="data/skills.js"></script>
+    <script src="script.js"></script>
+
 </body>
 </html>
