update about be section

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
             </h2>
             <div class="w-24 h-1 bg-blue-600 mx-auto"></div>
           </div>
+
           <div class="grid md:grid-cols-2 gap-12 items-center">
             <div class="fade-in">
               <img
@@ -235,42 +236,26 @@
             </div>
             <div class="fade-in">
               <h3 class="text-2xl font-semibold text-gray-900 mb-4">
-                Hello! I'm Senidu Ravihara
+                Hello! I'm Alex Johnson
               </h3>
               <p class="text-gray-700 mb-4">
-                Software Engineering Undergraduate from Hikkaduwa, Sri Lanka.<br />
-                Passionate about web, mobile, and AI-powered solutions.
+                I'm a passionate Full-Stack Developer with expertise in modern
+                web technologies, mobile app development, and AI integration. My
+                journey in programming has led me to work on diverse projects
+                from business applications to innovative AI platforms.
               </p>
-              <ul class="text-gray-700 mb-4">
-                <li><strong>Phone:</strong> 0781718964</li>
-                <li>
-                  <strong>Email:</strong>
-                  <a
-                    href="mailto:seniduravihara@gmail.com"
-                    class="text-blue-600 hover:underline"
-                    >seniduravihara@gmail.com</a
-                  >
-                </li>
-                <li><strong>Location:</strong> Hikkaduwa, Sri Lanka</li>
-                <li>
-                  <strong>GitHub:</strong>
-                  <a
-                    href="https://github.com/SeniduRavihara"
-                    target="_blank"
-                    class="text-blue-600 hover:underline"
-                    >SeniduRavihara</a
-                  >
-                </li>
-                <li>
-                  <strong>LinkedIn:</strong>
-                  <a
-                    href="https://www.linkedin.com/in/senidu-ravihara"
-                    target="_blank"
-                    class="text-blue-600 hover:underline"
-                    >senidu-ravihara</a
-                  >
-                </li>
-              </ul>
+              <p class="text-gray-700 mb-4">
+                I specialize in React ecosystem, Node.js, and have extensive
+                experience with Firebase, Next.js, and React Native. I enjoy
+                building scalable solutions that solve real-world problems and
+                create meaningful user experiences.
+              </p>
+              <p class="text-gray-700 mb-6">
+                As a team leader and individual contributor, I've successfully
+                delivered projects ranging from event management platforms to
+                desktop applications, always focusing on clean code, user
+                experience, and innovative solutions.
+              </p>
               <a
                 href="#"
                 class="inline-flex items-center px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg transition-colors"
