--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
             Software Engineering Undergraduate & Full-Stack Developer
           </p>
           <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto fade-in">
-            Passionate about web, mobile, and AI-powered solutions. Based in
-            Hikkaduwa, Sri Lanka.
+            Passionate about web, mobile, and AI-powered solutions.
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center fade-in">
             <a
@@ -236,7 +235,7 @@
             </div>
             <div class="fade-in">
               <h3 class="text-2xl font-semibold text-gray-900 mb-4">
-                Hello! I'm Alex Johnson
+                Hello! I'm Senidu Ravihara
               </h3>
               <p class="text-gray-700 mb-4">
                 I'm a passionate Full-Stack Developer with expertise in modern
@@ -282,22 +281,21 @@
             </h2>
             <div class="w-24 h-1 bg-blue-600 mx-auto"></div>
           </div>
-
-          <div class="grid lg:grid-cols-2 gap-8">
+          <div class="grid lg:grid-cols-2 gap-8 items-stretch">
             <!-- University Education -->
-            <div class="fade-in">
-              <div class="bg-white rounded-lg shadow-md p-6 mb-6">
+            <div class="fade-in h-full">
+              <div class="bg-white rounded-lg shadow-md p-6 mb-6 h-full">
                 <div class="flex items-center mb-4">
                   <i class="fas fa-university text-blue-600 mr-3 text-xl"></i>
                   <h3 class="text-xl font-semibold">University Education</h3>
                 </div>
                 <h4 class="text-lg font-semibold mb-2">
-                  Bachelor of Science in Computer Science
+                  Bachelor of Computing Honours in Software Engineering
                 </h4>
                 <p class="text-gray-600 mb-4">
-                  University of Technology • 2022 - 2026 (Expected)
+                  University of Sri Jayewardenepura • 2024 - 2028
                 </p>
-                <p class="text-gray-700 mb-2"><strong>GPA:</strong> 3.8/4.0</p>
+                <p class="text-gray-700 mb-2"><strong>GPA:</strong> 3.54/4.0</p>
                 <p class="text-gray-700 mb-2">
                   <strong>Relevant Coursework:</strong>
                 </p>
@@ -311,30 +309,30 @@
                 </ul>
               </div>
             </div>
-
             <!-- A/L Results -->
-            <div class="fade-in">
-              <div class="bg-white rounded-lg shadow-md p-6">
+            <div class="fade-in h-full">
+              <div class="bg-white rounded-lg shadow-md p-6 h-full">
                 <div class="flex items-center mb-4">
                   <i class="fas fa-certificate text-blue-600 mr-3 text-xl"></i>
                   <h3 class="text-xl font-semibold">Advanced Level Results</h3>
                 </div>
-                <p class="text-gray-600 mb-4">Physical Science Stream • 2021</p>
-
+                <p class="text-gray-600 mb-4">Physical Science Stream • 2022</p>
+                <p class="text-gray-700 mb-2">
+                  <strong>Z-Score:</strong> 1.809
+                </p>
                 <div class="space-y-4">
                   <div
                     class="flex items-center justify-between p-3 bg-gray-50 rounded-lg"
                   >
                     <div class="flex items-center">
                       <i class="fas fa-calculator text-blue-600 mr-3"></i>
-                      <span class="font-medium">Mathematics</span>
+                      <span class="font-medium">Combined Mathematics</span>
                     </div>
                     <span
-                      class="px-3 py-1 bg-green-100 text-green-800 rounded-full text-sm font-medium"
-                      >A</span
+                      class="px-3 py-1 bg-blue-100 text-blue-800 rounded-full text-sm font-medium"
+                      >B</span
                     >
                   </div>
-
                   <div
                     class="flex items-center justify-between p-3 bg-gray-50 rounded-lg"
                   >
@@ -347,7 +345,6 @@
                       >A</span
                     >
                   </div>
-
                   <div
                     class="flex items-center justify-between p-3 bg-gray-50 rounded-lg"
                   >
@@ -356,18 +353,10 @@
                       <span class="font-medium">Chemistry</span>
                     </div>
                     <span
-                      class="px-3 py-1 bg-blue-100 text-blue-800 rounded-full text-sm font-medium"
-                      >B</span
+                      class="px-3 py-1 bg-green-100 text-green-800 rounded-full text-sm font-medium"
+                      >A</span
                     >
                   </div>
-                </div>
-
-                <div class="mt-4 p-3 bg-blue-50 rounded-lg">
-                  <p class="text-sm text-blue-800">
-                    <i class="fas fa-info-circle mr-2"></i>
-                    Strong foundation in analytical thinking and problem-solving
-                    through science subjects
-                  </p>
                 </div>
               </div>
             </div>
